fixed some spacing

--- a/styles.css
+++ b/styles.css
@@ -103,8 +103,8 @@ body {
 #announcements-blocks>* {
     /* border: 1px solid black; */
     padding: 1rem;
-    margin-right: 2rem;
     background-color: white;
+    border-radius: 5px;
 }
 
 .announcement-border {
